gccida/g2/loc_descriptor_from_tree
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loc_descriptor_from_tree/src/dwarf2out.c:8454:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loc_descriptor_from_tree/src/dwarf2out.c:8477:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inner_reference; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loc_descriptor_from_tree/src/dwarf2out.c:8494:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loc_descriptor_from_tree/src/dwarf2out.c:8531:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v82; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loc_descriptor_from_tree/src/dwarf2out.c:8533:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pmode; // [rsp+8h] [rbp-60h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loc_descriptor_from_tree/src/dwarf2out.c:8991:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8292, "loc_descriptor_from_tree"); 
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loc_descriptor_from_tree/src/obj/dwarf2out.o] Error 1
